--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "@mantine/dates": "^4.1.4",
         "@mantine/hooks": "^4.1.3",
         "@mantine/rte": "^4.1.3",
+        "@tinymce/tinymce-react": "^4.1.0",
         "classnames": "^2.3.1",
         "dayjs": "^1.11.1",
         "filepond": "^4.30.3",
