--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/ui": "^3.4",
         "spatie/laravel-tags": "^4.3",
         "tightenco/ziggy": "^1.4",
-        "league/flysystem-aws-s3-v3": "1.0.29",
+        "league/flysystem-aws-s3-v3": "1.0.29"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
