--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^3.4",
         "spatie/laravel-tags": "^4.3",
-        "tightenco/ziggy": "^1.4",
+        "tightenco/ziggy": "^1.4"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
